--- a/outputs/.gitignore
+++ b/outputs/.gitignore
@@ -15,3 +15,4 @@ stichaeidae_pre.csv
 tax_df_20240717.csv
 all_taxa_simple_20250110.csv
 decontaminated_asv_table.csv
+taxonomy_20250505_collapsed_forCPowers.csv
